clusters/app.ci/prow/03_deployment/tot.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: ci
  name: tot
spec:
  selector:
    app: prow
    component: tot
  ports:
  - port: 80
    targetPort: 8888
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ci
  name: tot
  labels:
    app: prow
    component: tot
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: prow
      component: tot
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prow
        component: tot
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: node.kubernetes.io/instance-type
                operator: NotIn
                values:
                - r5.4xlarge
      containers:
      - name: tot
        image: us-docker.pkg.dev/k8s-infra-prow/images/tot:v20260819-7593870dc
        args:
        - --config-path=/etc/config/config.yaml
        - --supplemental-prow-config-dir=/etc/config
        - --fallback=true
        - --fallback-bucket=http://gcsweb/gcs/test-platform-results
        - --storage=/storage/tot.json
        - --job-config-path=/var/repo/release/ci-operator/jobs
        ports:
          - name: http
            containerPort: 8888
        volumeMounts:
        - name: tot-volume
          mountPath: /storage
        - name: config
          mountPath: /etc/config
        - name: release
          mountPath: /var/repo
        resources:
          requests:
            memory: "18Gi"
            cpu: "20m"
          limits:
            memory: "22Gi"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 20
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8081
      - name: git-sync
        command:
        - /git-sync
        args:
        - --repo=https://github.com/openshift/release.git
        - --ref=main
        - --period=30s
        - --root=/tmp/git-sync
        - --max-failures=3
        - --link=release
        image: quay-proxy.ci.openshift.org/openshift/ci:ci_git-sync_v4.3.0
        volumeMounts:
        - name: release
          mountPath: /tmp/git-sync
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.5"
          limits:
            memory: "2Gi"
      volumes:
      - name: tot-volume
        persistentVolumeClaim:
          claimName: tot-storage
      - name: config
        configMap:
          name: config
      - name: release
        emptyDir: {}
