clusters/app.ci/prow/03_deployment/gangway.yaml
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  name: gangway
  namespace: openshift
parameters:
- description: The session secret for the component.
  name: SESSION_SECRET
  generate: expression
  from: "[a-zA-Z0-9]{43}"
- description: "The namespace."
  name: NAMESPACE
  value: ci
objects:
- apiVersion: v1
  kind: Route
  metadata:
    namespace: ${NAMESPACE}
    name: gangway
    annotations:
      haproxy.router.openshift.io/timeout: "90s"
  spec:
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: gangway
- apiVersion: v1
  kind: Service
  metadata:
    namespace: ${NAMESPACE}
    name: gangway
    labels:
      app: prow
      component: gangway
    annotations:
      service.alpha.openshift.io/serving-cert-secret-name: gangway-tls
  spec:
    selector:
      app: prow
      component: gangway
    ports:
    - name: main
      port: 443
      targetPort: 8443
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    namespace: ${NAMESPACE}
    name: gangway
    labels:
      app: prow
      component: gangway
    annotations:
      keel.sh/policy: force
      keel.sh/matchTag: "true"
      keel.sh/trigger: poll
      keel.sh/pollSchedule: "@every 5m"
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: prow
        component: gangway
    template:
      metadata:
        labels:
          app: prow
          component: gangway
      spec:
        serviceAccountName: gangway
        containers:
        - name: gangway
          image: us-docker.pkg.dev/k8s-infra-prow/images/gangway:v20260819-7593870dc
          args:
          - --config-path=/etc/config/config.yaml
          - --supplemental-prow-config-dir=/etc/config
          - --github-app-id=$(GITHUB_APP_ID)
          - --github-app-private-key-path=/etc/github/cert
          - --github-endpoint=http://ghproxy
          - --github-endpoint=https://api.github.com
          - --github-graphql-endpoint=http://ghproxy/graphql
          - --job-config-path=/var/repo/release/ci-operator/jobs
          - --grace-period=110s
          - --dry-run=false
          ports:
            - name: grpc
              containerPort: 32000
            - name: metrics
              containerPort: 9090
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 90
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 600
          volumeMounts:
          - name: github-app-credentials
            mountPath: /etc/github
            readOnly: true
          - name: service-account-token
            mountPath: /var/sa-token
          - mountPath: /etc/proxy/secrets
            name: session-secret
          - name: config
            mountPath: /etc/config
            readOnly: true
          - name: release
            mountPath: /var/repo
          resources:
            requests:
              memory: "17Gi"
              cpu: "1"
            limits:
              memory: "21Gi"
        - name: git-sync
          command:
          - /git-sync
          args:
          - --repo=https://github.com/openshift/release.git
          - --ref=main
          - --period=30s
          - --root=/tmp/git-sync
          - --max-failures=3
          - --link=release
          image: quay-proxy.ci.openshift.org/openshift/ci:ci_git-sync_v4.3.0
          volumeMounts:
          - name: release
            mountPath: /tmp/git-sync
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.5"
            limits:
              memory: "2Gi"
        - name: oauth-proxy
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
          image: quay.io/openshift/origin-oauth-proxy:4.16
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8443
            name: web
          args:
          - -provider=openshift
          - -https-address=:8443
          - -http-address=
          - -email-domain=*
          - -upstream=http://localhost:31999
          - -client-id=system:serviceaccount:ci:gangway
          - -openshift-ca=/etc/pki/tls/cert.pem
          - -openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
          - '-openshift-sar=[{"resource": "namespaces", "verb": "get"},{"resource": "systemusers", "verb": "impersonate"}]'
          - '-openshift-delegate-urls={"/": {"resource": "namespaces", "verb": "get"}, "/bulk-job-status-update": {"resource": "systemusers", "verb": "impersonate"}}'
          - -client-secret-file=/var/run/secrets/kubernetes.io/serviceaccount/token
          - -cookie-secret-file=/etc/proxy/secrets/session_secret
          - -cookie-samesite=none
          - -tls-cert=/etc/tls/private/tls.crt
          - -tls-key=/etc/tls/private/tls.key
          volumeMounts:
          - mountPath: /etc/tls/private
            name: gangway-tls
          - mountPath: /etc/proxy/secrets
            name: session-secret
        - name: envoyproxy
          resources:
            requests:
              memory: "1Gi"
            limits:
              memory: "1Gi"
          imagePullPolicy: Always
          image: quay-proxy.ci.openshift.org/openshift/ci:ci_tp-envoyproxy_latest
        - name: nginx-rate-limit
          resources:
            requests:
              memory: "1Gi"
            limits:
              memory: "1Gi"
          imagePullPolicy: Always
          image: quay-proxy.ci.openshift.org/openshift/ci:ci_nging-rate-limit_latest
          volumeMounts:
          - mountPath: /var/cache/nginx
            name: nginx-cache
          - mountPath: /tmp
            name: nginx-tmp
        volumes:
        - name: github-app-credentials
          secret:
            secretName: openshift-prow-github-app
        - name: service-account-token
          projected:
            sources:
            - serviceAccountToken:
                path: token
        - name: config
          configMap:
            name: config
        - name: session-secret
          secret:
            secretName: gangway-session-secret
        - name: gangway-tls
          secret:
            secretName: gangway-tls
        - name: release
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-tmp
          emptyDir: {}

- apiVersion: v1
  kind: Secret
  metadata:
    namespace: ${NAMESPACE}
    name: gangway-session-secret
  stringData:
    session_secret: "${SESSION_SECRET}="
- apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRole
  metadata:
    name: cluster-gangway-submit
  rules:
  - apiGroups:
    - ""
    resources:
    - namespaces
    verbs:
    - get
- apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRoleBinding
  metadata:
    name: cluster-gangway-submit
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: ClusterRole
    name: cluster-gangway-submit
  subjects:
  - apiGroup: rbac.authorization.k8s.io
    kind: Group
    name: aos-qe
  - apiGroup: rbac.authorization.k8s.io
    kind: Group
    name: msi-qe
  - kind: ServiceAccount
    namespace: cspi-qe
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: rhtap-qe
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: aos-qe
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: hypershift-qe
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: ocpci-lp-interop
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: cnv-qe
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: konflux-tp
    name: gangway-token
  - apiGroup: rbac.authorization.k8s.io
    kind: Group
    name: cert-manager-operator-dev
  - apiGroup: rbac.authorization.k8s.io
    kind: Group
    name: system:authenticated
  - kind: ServiceAccount
    namespace: ocp-qe-logging-team
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: telcov10n-ci
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: oadp-dev
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: aro-hcp-prow-ci
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: aro-classic-prow-ci
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: ocp-isc-qe-team
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: osc-prow
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: ocp-errata-reliability-team
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: quaykonflux
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: quay-ambient-ci
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: hp-sre-rosa-ci
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: hypershift-pool-admins
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: medik8s-qe-gpc
    name: periodic-job-bot
  - kind: ServiceAccount
    namespace: slcm-ci-cd
    name: periodic-job-bot
